--- a/natura.html
+++ b/natura.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nature’s Beauty</title>
+    <title>Nature’s </title>
     <link rel="stylesheet" href="./natura.css">
 </head>
 <body>
